Adding script in order to fix --watch error in Babel

--- a/hello/package.json
+++ b/hello/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "babel src -d scripts --watch"
+    "build": "babel src -d scripts --watch",
+    "clear.watch": "echo fs.inotify.max_user_watches=524288 | sudo tee -a /etc/sysctl.conf && sudo sysctl -p"
   },
   "author": "",
   "license": "ISC",
