--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-/hello/node_modules
-/hello/public/bundle.js
+node_modules/
 
-/your-first-react-native-app-source/node_modules
+/hello/public/bundle.js
